--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "handles-shared-components",
-  "version": "1.0.0",
-  "main": "./lib/index.js",
+  "name": "@koralabs/handles-shared-components",
+  "version": "0.1.0",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/koralabs/handles-shared-components.git",
   "author": "bigirishlion <bigirishlion@koralabs.io>",
   "license": "MIT",
@@ -9,6 +11,9 @@
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@storybook/addon-essentials": "^7.4.1",
     "@storybook/addon-interactions": "^7.4.1",
     "@storybook/addon-links": "^7.4.1",
@@ -19,8 +24,13 @@
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.21",
     "jackspeak": "2.1.1",
+    "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^3.29.2",
+    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.4.1",
     "typescript": "^5.2.2"
   },
@@ -29,12 +39,14 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@koralabs/handle-svg": "link:../../handle-svg",
+    "@koralabs/handle-svg": "2.1.0",
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
     "qr-code-styling": "^1.6.0-rc.1"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build": "tsc --outDir dist/lib --declarationDir dist/types --declaration true && rollup -c",
+    "npm:publish": "yarn build && yarn publish"
   }
 }
