--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "tsc",
-    "rollup": "yarn build && --outDir dist/lib --declarationDir dist/types --declaration true && rollup -c",
+    "build": "tsc --outDir dist/lib --declarationDir dist/types --declaration true && rollup -c",
     "npm:publish": "yarn build && yarn publish"
   }
 }
