--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  },
   "dependencies": {
     "@koralabs/handle-svg": "2.1.0",
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
