--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@koralabs/handles-shared-components",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -12,19 +12,22 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@storybook/addon-essentials": "^7.4.1",
     "@storybook/addon-interactions": "^7.4.1",
     "@storybook/addon-links": "^7.4.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.4.1",
     "@storybook/react": "^7.4.1",
     "@storybook/react-webpack5": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.21",
+    "autoprefixer": "^10.4.15",
     "jackspeak": "2.1.1",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.29.2",
@@ -32,6 +35,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.4.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -42,15 +46,14 @@
     "jackspeak": "2.1.1"
   },
   "dependencies": {
-    "@koralabs/handle-svg": "2.1.0",
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
-    "qr-code-styling": "^1.6.0-rc.1"
+    "framer-motion": "^10.16.4"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "tsc",
-    "build:rollup": "rollup -c",
+    "build:tsc": "tsc",
+    "build": "rollup -c",
     "npm:publish": "yarn build && yarn publish"
   },
   "files": [
