--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@koralabs/handles-shared-components",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -24,6 +24,7 @@
     "@storybook/react": "^7.4.1",
     "@storybook/react-webpack5": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
+    "@types/opentype.js": "^1.3.6",
     "@types/react": "^18.2.21",
     "autoprefixer": "^10.4.15",
     "jackspeak": "2.1.1",
@@ -46,8 +47,11 @@
     "jackspeak": "2.1.1"
   },
   "dependencies": {
+    "@koralabs/handle-svg": "2.1.1",
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
-    "framer-motion": "^10.16.4"
+    "framer-motion": "^10.16.4",
+    "opentype.js": "^1.3.4",
+    "qr-code-styling": "^1.6.0-rc.1"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
