--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "rootDir": "./src",
     "outDir": "./lib"
   },
-  "include": ["src"],
+  "include": ["src", "./src/global.d.ts"],
   "exclude": ["node_modules", "lib"]
 }
