--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "build-storybook": "storybook build -o dist/storybook",
     "build:tsc": "tsc",
     "build": "rollup -c",
     "npm:publish": "yarn build && yarn publish"
