--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@storybook/testing-library": "^0.2.0",
     "@types/opentype.js": "^1.3.6",
     "@types/react": "^18.2.21",
+    "@types/react-color": "^3.0.9",
+    "@types/tinycolor2": "^1.4.5",
     "autoprefixer": "^10.4.15",
     "jackspeak": "2.1.1",
     "opentype.js": "^1.3.4",
@@ -50,10 +52,16 @@
     "jackspeak": "2.1.1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@koralabs/handle-svg": "2.1.2",
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
     "framer-motion": "^10.16.4",
-    "qr-code-styling": "1.5.0"
+    "qr-code-styling": "1.5.0",
+    "react-color": "^2.19.3",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "tinycolor2": "^1.6.0"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
