--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@koralabs/handles-public-api-interfaces": "^2.11.2",
     "framer-motion": "^10.16.4",
     "qr-code-styling": "1.5.0",
+    "rc-slider": "^10.5.0",
     "react-color": "^2.19.3",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
